# rules_typescript_proto

./: WORKSPACE  package.json
.github/workflows/: ci.yaml
src/: package.json  typescript_proto_library.bzl
test/: BUILD.bazel  rollup.config.js
test/integration/: BUILD.bazel  IntegrationTest.java  envoy.yml
test/integration/client/: BUILD.bazel  app.component.ts  rollup.config.js
test/proto/common/: delivery_person.proto
